_sandbox: update funim

--- a/_sandbox/funim/fixproj.toml
+++ b/_sandbox/funim/fixproj.toml
@@ -94,41 +94,41 @@ files = []
 
 [[dependencies]]
 name = "funim"
-version = "0.4.0"
+version = "*"
 git = { url = "https://github.com/tttmmmyyyy/fixlang-canim.git" }
 
 [[dependencies]]
 name = "misc-algos"
-version = "0.7.0"
+version = "*"
 git = { url = "https://github.com/tttmmmyyyy/fixlang-misc-algos.git" }
 
 [[dependencies]]
 name = "math"
-version = "1.1.1"
+version = "*"
 git = { url = "https://github.com/tttmmmyyyy/fixlang-math.git" }
 
 [[dependencies]]
 name = "time"
-version = "1.0.1"
+version = "*"
 git = { url = "https://github.com/tttmmmyyyy/fixlang-time.git" }
-
 
 [[dependencies]]
 name = "random"
-version = "1.1.1"
+version = "*"
 git = { url = "https://github.com/tttmmmyyyy/fixlang-random.git" }
 
 [[dependencies]]
+name = "ring-buffer"
+version = "*"
+git = { url = "https://github.com/tttmmmyyyy/ring-buffer.git" }
+
+[[dependencies]]
+name = "minilib-common"
+version = "*"
+git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
+
+[[dependencies]]
 name = "minilib-random"
-version = "0.5.2"
+version = "*"
 git = { url = "https://github.com/pt9999/fixlang-minilib-random.git" }
 
-[[dependencies]]
-name = "asynctask"
-version = "1.1.1"
-git = { url = "https://github.com/tttmmmyyyy/fixlang-asynctask.git" }
-
-[[dependencies]]
-name = "ring-buffer"
-version = "0.1.1"
-git = { url = "https://github.com/tttmmmyyyy/ring-buffer.git" }
