update toml (wip)

--- a/_sandbox/toml/fixproj.toml
+++ b/_sandbox/toml/fixproj.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 
 [build]
 files = [
-#    "lib/encoding/toml.fix",
+    "lib/encoding/toml.fix",
     "lib/encoding/toml/toml_reader.fix",
 ]
 opt_level = "basic"
@@ -16,5 +16,5 @@ git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
 
 [[dependencies]]
 name = "minilib-text"
-version = "0.1.5"
+version = "*"
 git = { url = "https://github.com/pt9999/fixlang-minilib-text.git" }
