update toml (wip)

--- a/_sandbox/toml/fixproj.toml
+++ b/_sandbox/toml/fixproj.toml
@@ -9,6 +9,15 @@ files = [
 ]
 opt_level = "basic"
 
+[build.test]
+files = [
+    "tests/test.fix",
+#    "tests/encoding/toml_test.fix",
+    "tests/encoding/toml/toml_reader_test.fix",
+]
+opt_level = "basic"
+
+
 [[dependencies]]
 name = "minilib-common"
 version = "*"
