--- a/_sandbox/fp/comonad/Makefile
+++ b/_sandbox/fp/comonad/Makefile
@@ -1,7 +1,9 @@
 all:
 
-test: test-cofree
+test: test-cofree test-store
 
 test-cofree:
 	fix run -f cofree.fix -f cofree_test.fix
 
+test-store:
+	fix run -f store.fix -f store_test.fix
