--- a/_sandbox/toml/fixproj.toml
+++ b/_sandbox/toml/fixproj.toml
@@ -6,24 +6,32 @@ version = "0.1.0"
 files = [
     "lib/encoding/toml.fix",
     "lib/encoding/toml/toml_reader.fix",
+    "lib/encoding/toml/toml_writer.fix",
 ]
 opt_level = "basic"
 
 [build.test]
 files = [
     "tests/test.fix",
-#    "tests/encoding/toml_test.fix",
+    "tests/encoding/toml_test.fix",
     "tests/encoding/toml/toml_reader_test.fix",
+    "tests/encoding/toml/toml_writer_test.fix",
 ]
 opt_level = "basic"
 
 
 [[dependencies]]
 name = "minilib-common"
-version = "*"
+version = "0.12.3"
 git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
 
 [[dependencies]]
 name = "minilib-text"
-version = "*"
+version = "0.8.3"
 git = { url = "https://github.com/pt9999/fixlang-minilib-text.git" }
+
+
+[[dependencies]]
+name = "minilib-collection"
+version = "0.7.0"
+git = { url = "https://github.com/pt9999/fixlang-minilib-collection.git" }
