update toml (wip)

--- a/_sandbox/toml/fixproj.toml
+++ b/_sandbox/toml/fixproj.toml
@@ -30,8 +30,7 @@ name = "minilib-text"
 version = "0.8.3"
 git = { url = "https://github.com/pt9999/fixlang-minilib-text.git" }
 
-
 [[dependencies]]
-name = "minilib-collection"
-version = "0.7.0"
-git = { url = "https://github.com/pt9999/fixlang-minilib-collection.git" }
+name = "hashmap"
+version = "1.1.4"
+git = { url = "https://github.com/tttmmmyyyy/fixlang-hashmap.git" }
