fp/comonad: add duality2.fix

--- a/_sandbox/fp/comonad/Makefile
+++ b/_sandbox/fp/comonad/Makefile
@@ -1,3 +1,9 @@
 all:
 
-test:
+test: test-duality test-duality2
+
+test-duality:
+	fix run -f duality.fix
+
+test-duality2:
+	fix run -f duality2.fix -f ../free.fix
