--- a/_sandbox/fp/comonad/fixproj.toml
+++ b/_sandbox/fp/comonad/fixproj.toml
@@ -7,6 +7,11 @@ files = []
 opt_level = "basic"
 
 [[dependencies]]
+name = "hashmap"
+version = "1.1.4"
+git = { url = "https://github.com/tttmmmyyyy/fixlang-hashmap.git" }
+
+[[dependencies]]
 name = "minilib-common"
 version = "*"
 git = { url = "https://github.com/pt9999/fixlang-minilib-common.git" }
@@ -20,3 +25,4 @@ git = { url = "https://github.com/pt9999/fixlang-minilib-monad.git" }
 name = "minilib-comonad"
 version = "*"
 git = { url = "https://github.com/pt9999/fixlang-minilib-comonad.git" }
+
