fp/comonad: update for minilib-monad@0.11.1

--- a/_sandbox/fp/comonad/Makefile
+++ b/_sandbox/fp/comonad/Makefile
@@ -6,8 +6,8 @@ test-duality:
 	fix run -f duality.fix
 
 test-duality2:
-	fix run -f duality2.fix -f ../free.fix -o a.out
+	fix run -f duality2.fix -o a.out
 
 test-duality3:
-	fix run -f duality3.fix -f ../free.fix -o a.out
+	fix run -f duality3.fix -o a.out
 
