fp/comonad: split dual.fix, iostore.fix

--- a/_sandbox/fp/comonad/Makefile
+++ b/_sandbox/fp/comonad/Makefile
@@ -1,13 +1,13 @@
 all:
 
-test: test-duality test-duality2 test-duality3
+test: test-duality1 test-duality2 test-duality3
 
-test-duality:
-	fix run -f duality.fix
+test-duality1:
+	fix run -f duality_example1.fix -f dual.fix -f iostore.fix -o a.out
 
 test-duality2:
-	fix run -f duality2.fix -o a.out
+	fix run -f duality_example2.fix -f dual.fix -f iostore.fix -o a.out
 
 test-duality3:
-	fix run -f duality3.fix -o a.out
+	fix run -f duality_example3.fix -f dual.fix -f iostore.fix -o a.out
 
