fp/comonad: add duality (reader <-> env), (writer <-> traced)

--- a/_sandbox/fp/comonad/Makefile
+++ b/_sandbox/fp/comonad/Makefile
@@ -1,6 +1,6 @@
 all:
 
-test: test-duality1 test-duality2 test-duality3
+test: test-duality1 test-duality2 test-duality3 test-duality4
 
 test-duality1:
 	fix run -f duality_example1.fix -f dual.fix -f iostore.fix -o a.out
@@ -11,3 +11,5 @@ test-duality2:
 test-duality3:
 	fix run -f duality_example3.fix -f dual.fix -f iostore.fix -o a.out
 
+test-duality4:
+	fix run -f duality_example4.fix -f dual.fix -f iostore.fix -o a.out
