--- a/_sandbox/fp/comonad/Makefile
+++ b/_sandbox/fp/comonad/Makefile
@@ -3,13 +3,13 @@ all:
 test: test-duality1 test-duality2 test-duality3 test-duality4
 
 test-duality1:
-	fix run -f duality_example1.fix -f dual.fix -f iostore.fix -o a.out
+	fix run -f duality_example1.fix -o a.out
 
 test-duality2:
-	fix run -f duality_example2.fix -f dual.fix -f iostore.fix -o a.out
+	fix run -f duality_example2.fix -o a.out
 
 test-duality3:
-	fix run -f duality_example3.fix -f dual.fix -f iostore.fix -o a.out
+	fix run -f duality_example3.fix -o a.out
 
 test-duality4:
-	fix run -f duality_example4.fix -f dual.fix -f iostore.fix -o a.out
+	fix run -f duality_example4.fix -o a.out
